Fix the typo and add jvm option configuration